[workspace]
resolver = "2"
members = [
    "chapter-01/hello-world",
    "chapter-02/guessing-game",
    "chapter-03/branches",
    "chapter-03/functions",
    "chapter-03/loops",
    "chapter-03/variables",
    "chapter-03/convert-temp",
    "chapter-03/nth-fib",
    "chapter-04/strings",
    "chapter-05/area-calc",
    "chapter-06/enums",
    "chapter-07/backyard",
    "chapter-07/restaurant",
    "chapter-03/i-overflows",
]
